--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    background-color: #fafafa;
+    background-image: url('/images/texture.png');
+    background-repeat: repeat;
+    background-attachment: fixed;
   }
 
   /* custom scrollBar */
